# tree-sitter-mcfunction

./: .gitattributes  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  example.mcfunction  fetch-commands.cjs  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mcfunction.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mcfunction/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMCFunctionTests/: TreeSitterMCFunctionTests.swift
data/: aliases.json  commands.cjs  emojis.json  selector_properties.json
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: command_say.txt  command_tell.txt  coordinates.txt  selector.txt
